--- a/vibm/nomads/docker/arm/Dockerfile
+++ b/vibm/nomads/docker/arm/Dockerfile
@@ -13,5 +13,8 @@ ENV NOMADS_TGZ=nomads_devel_config.tgz
 # Make NOMADS folders and download project files
 RUN mkdir -p ${NOMADS_HOME} \
   && cd ${NOMADS_HOME} \
-  && wget ${NOMADS_URL}/${NOMADS_TGZ} \
-  && ls -l .
+  && wget ${NOMADS_URL}/${NOMADS_TGZ} -O ${NOMADS_TGZ} \ 
+  && tar -xvzf ${NOMADS_TGZ} \
+  && ls -l . \
+  && pip install -r dev_requirements.txt \
+  && pip freeze
