--- a/vibm/nomads/Dockerfile
+++ b/vibm/nomads/Dockerfile
@@ -1,29 +1,23 @@
-FROM python:3.6-alpine
+# Back-Robot
+FROM python:3.7-alpine3.8
 
+WORKDIR /usr/src/app
+
+COPY requirements-back-robot.txt ./
+
+# Alpine Package Manager
 RUN apk update 
-RUN apk add iputils
-RUN apk add nmap
-RUN apk add sudo
+RUN apk add mysql-client
 
-ENV FLASK_APP nomads/server.py
-ENV FLASK_CONFIG production
+ADD nomads/backend ./nomads/
+ADD config ./config
 
-RUN adduser -D vlab
-USER vlab 
+ENV PYTHONPATH "${PYTHONPATH}:/usr/src/app"
 
-WORKDIR /home/vlab
+RUN pip install -r requirements-back-robot.txt
 
-COPY requirements_gui.txt requirements.txt
+RUN mkdir logs && touch logs/back-robot.log
 
-RUN python -m venv venv_vlab
-RUN venv_vlab/bin/pip install -r requirements.txt
+RUN ls ./
 
-#RUN pip install --user -r requirements.txt
-
-COPY nomads nomads
-COPY boot.sh ./
-
-EXPOSE 5000
-ENTRYPOINT ["./boot.sh"]
-#CMD python -m flask run --host=127.0.0.1 --port=5000
-#CMD python -m gunicorn -b :5000 --access-logfile - --error-logfile - server:app
+CMD ["python", "-m", "nomads.engine"]
