--- a/vibm/nomads/config/backend/back-robot.toml
+++ b/vibm/nomads/config/backend/back-robot.toml
@@ -4,9 +4,12 @@
 title = "TOML Configuration File for Backend Monitoring Robot"
 
 [external-monitoring]
-vlabs = [ "vlab1", "vlab2" ]
-ip-ping-freq = "10-msec"
-port-scan-freq = "2-min"
+vlabs = [ "vlab3" ]
+ip-ping-freq-min = "2"
+port-scan-freq-min = "2"
+
+[internal-monitoring]
+vlab-underneath = "vlab3"
 
 [database]
-server = "192.168.1.100"
+server = "192.24.0.2"
