internal-agent support

--- a/vibm/nomads/Dockerfile
+++ b/vibm/nomads/Dockerfile
@@ -21,4 +21,4 @@ RUN mkdir logs && touch logs/internal-agent.log
 
 RUN ls ./
 
-CMD ["python", "-m", "nomads.internal"]
+CMD ["sudo python", "-m", "nomads.internal"]
