--- a/vibm/nomads/nomads/backend/internal/consumer/Dockerfile
+++ b/vibm/nomads/nomads/backend/internal/consumer/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.7-alpine3.8
 
 WORKDIR /usr/src/app
-
-COPY requirements-internal-agent.txt ./
-
 ENV PYTHONPATH /usr/src/app
+
+COPY requirements.txt ./
+RUN pip install -r requirements-internal-agent.txt
