internal-agent support

--- a/vibm/nomads/nomads/backend/internal/producer/Dockerfile
+++ b/vibm/nomads/nomads/backend/internal/producer/Dockerfile
@@ -6,4 +6,4 @@ ENV PYTHONPATH /usr/src/app
 COPY requirements.txt ./
 RUN pip install -r requirements.txt
 
-ADD producer.py /usr/src/app
+ADD producer.py /usr/src/app/
