--- a/vibm/nomads/nomads/backend/internal/consumer/Dockerfile
+++ b/vibm/nomads/nomads/backend/internal/consumer/Dockerfile
@@ -6,4 +6,4 @@ ENV PYTHONPATH /usr/src/app
 COPY requirements.txt ./
 RUN pip install -r requirements.txt
 
-ADD consumer.py /usr/src/app
+ADD consumer.py /usr/src/app/
