--- a/vibm/nomads/docker-compose.yml
+++ b/vibm/nomads/docker-compose.yml
@@ -1,5 +1,6 @@
 rabbitmq:
   image: rabbitmq:3-management-alpine
+  command: rabbitmq-plugins enable rabbitmq_mqtt
 consumer: 
   build: nomads/backend/internal/consumer
   links:
