internal-agent support

--- a/vibm/nomads/docker-compose.yml
+++ b/vibm/nomads/docker-compose.yml
@@ -1,6 +1,10 @@
 rabbitmq:
   image: rabbitmq:3-management-alpine
-  command: rabbitmq-plugins enable rabbitmq_mqtt
+  command: rabbitmq-plugins enable --offline rabbitmq_mqtt
+  restart: always
+  ports:
+  - 5672:5672 # Ports for daemon API
+  - 15672:15672 # Ports for management interface
 consumer: 
   build: nomads/backend/internal/consumer
   links:
