internal-agent support

--- a/vibm/nomads/nomads/backend/internal/rabbitmq/Dockerfile
+++ b/vibm/nomads/nomads/backend/internal/rabbitmq/Dockerfile
@@ -1,3 +1,8 @@
 FROM rabbitmq:3-management-alpine
 
-RUN rabbitmq_plugins 
+RUN rabbitmq-plugins enable --offline rabbitmq_mqtt
+
+RUN echo 'NODENAME=rabbit@localhost' > /etc/rabbitmq/rabbitmq-env.conf
+
+EXPOSE 15672
+EXPOSE 1883
