--- a/vibm/nomads/docker-compose.yml
+++ b/vibm/nomads/docker-compose.yml
@@ -15,4 +15,4 @@ producer:
   build: nomads/backend/internal/producer
   links: 
   - rabbitmq
-  command: python producer.py
+  command: python producer.py -p 5672 -s ${RABBIT_HOST_IP} -m "Hello" -r 30
