--- a/vibm/nomads/nomads/backend/internal/producer/Dockerfile
+++ b/vibm/nomads/nomads/backend/internal/producer/Dockerfile
@@ -8,4 +8,7 @@ RUN pip install -r requirements.txt
 
 ADD producer.py /usr/src/app/
 
+# Environment Variable 
+ENV RABBIT_HOST_IP 192.168.5.163
+
 CMD ["python", "producer.py", "-p 5672", "-s ${RABBIT_HOST_IP}", "-m 'Hello'", "-r 30"]
