mqtt-producer support

--- a/vibm/nomads/nomads/backend/internal/rabbitmq/Dockerfile
+++ b/vibm/nomads/nomads/backend/internal/rabbitmq/Dockerfile
@@ -2,7 +2,7 @@ FROM rabbitmq:3-management-alpine
 
 RUN rabbitmq-plugins enable --offline rabbitmq_mqtt
 
-RUN echo 'NODENAME=rabbit@localhost' > /etc/rabbitmq/rabbitmq-env.conf
+RUN echo 'NODENAME=rabbit@my-rabbit' > /etc/rabbitmq/rabbitmq-env.conf
 
 EXPOSE 15672
 EXPOSE 5672
