--- a/vibm/nomads/nomads/backend/internal/rabbitmq/Dockerfile
+++ b/vibm/nomads/nomads/backend/internal/rabbitmq/Dockerfile
@@ -4,14 +4,12 @@ FROM rabbitmq:3-management-alpine
 ENV RABBITMQ_USER nice_user
 ENV RABBITMQ_PASSWORD nice_user
 
-RUN sleep 10
-RUN rabbitmqctl add_user $RABBITMQ_USER $RABBITMQ_PASSWORD
-RUN rabbitmqctl set_user_tags $RABBITMQ_USER administrator
-RUN rabbitmqctl set_permissions -p / $RABBITMQ_USER ".*" ".*" ".*" 
-
 RUN rabbitmq-plugins enable --offline rabbitmq_mqtt
 
 RUN echo 'NODENAME=rabbit@my-rabbit' > /etc/rabbitmq/rabbitmq-env.conf
+
+COPY init.sh /
+ENTRYPOINT ["/init.sh"]
 
 EXPOSE 15672
 EXPOSE 5672
