--- a/vibm/nomads/nomads/backend/internal/rabbitmq/Dockerfile
+++ b/vibm/nomads/nomads/backend/internal/rabbitmq/Dockerfile
@@ -8,7 +8,9 @@ RUN rabbitmq-plugins enable --offline rabbitmq_mqtt
 
 RUN echo 'NODENAME=rabbit@my-rabbit' > /etc/rabbitmq/rabbitmq-env.conf
 
-COPY init.sh /
+COPY ./init.sh /
+RUN chmod +x /init.sh
+
 ENTRYPOINT ["/init.sh"]
 
 EXPOSE 15672
