--- a/vibm/nomads/nomads/backend/internal/producer/Dockerfile
+++ b/vibm/nomads/nomads/backend/internal/producer/Dockerfile
@@ -11,6 +11,6 @@ ADD producer.py /usr/src/app/
 # Environment Variable 
 ENV RABBIT_HOST_IP 172.24.0.3
 
-RUN ping -10 $RABBIT_HOST_IP 
+RUN ping -c 10 $RABBIT_HOST_IP 
 
 CMD ["python", "producer.py", "-p 5672", "-s $RABBIT_HOST_IP", "-m 'Hello'", "-r 30"]
