--- a/vibm/nomads/requirements_gui.txt
+++ b/vibm/nomads/requirements_gui.txt
@@ -1,5 +1,6 @@
-Flask==0.12.2
-flask_bootstrap==3.3.7
+#Flask==0.12.2
+Flask
+#flask_bootstrap==3.3.7
 gunicorn==19.7.1
 sqlalchemy==1.3.0b3
 sqlalchemy-utils==0.33.9
