--- a/vibm/nomads/Dockerfile
+++ b/vibm/nomads/Dockerfile
@@ -1,13 +1,13 @@
 FROM python:3.6-alpine
 
-#RUN apk update 
-#RUN apk add iputils
-#RUN apk add nmap
-#RUN apk add sudo
+RUN apk update 
+RUN apk add iputils
+RUN apk add nmap
+RUN apk add sudo
 
 #RUN apk add mysql-client
 
-ENV FLASK_APP nomads/server.py
+#ENV FLASK_APP server.py
 #ENV FLASK_CONFIG production
 
 RUN adduser -D vlab
@@ -21,13 +21,17 @@ COPY requirements_gui.txt requirements.txt
 #RUN venv_vlab/bin/pip install -r requirements.txt
 
 RUN pip install --user -r requirements.txt
+#RUN pip install -r requirements.txt 
 
 COPY nomads nomads
 COPY boot.sh ./
+COPY server.py ./
 
-#RUN mkdir logs && touch logs/back-robot.log
+RUN mkdir logs && touch logs/back-robot.log
 
+ENV PATH "${PATH}:/home/vlab/.local/bin"
 ENV PYTHONPATH "${PYTHONPATH}:/home/vlab/"
+ 
 EXPOSE 5000
 
 ENTRYPOINT ["./boot.sh"]
